--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>Welcome to BiniStop</h1>
+      <img src="icons/logo.png" alt="BiniStop Logo" class="logo">
       <nav class="nav">
         <a href="#menu">Menu</a>
         <a href="#about">About</a>
