--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="top-bar">
+      <img src="./icons/text-logo.PNG" alt="Icon" class="top-bar-icon">
+      <a href="#menu">Menu</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </div>
     <header class="header">
-      <img src="icons/logo.png" alt="BiniStop Logo" class="logo">
-      <nav class="nav">
-        <a href="#menu">Menu</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
+      <img src="icons/logo.PNG" alt="BiniStop Logo" class="logo">
     </header>
 
     <section id="hero" class="hero">
       <h2>Placeholder</h2>
       <p>Visit us for an amazing diner experience!</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
 
     <section id="menu" class="menu">
@@ -40,5 +43,8 @@
     <footer class="footer">
       <p>&copy; 2024 BiniStop</p>
     </footer>
+
+  <script src="./js/app.js">
+  </script>
   </body>
 </html>
