- Fixed Top Bar Icon being too big

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top-bar">
-      <img src="./icons/text-logo.PNG" alt="Icon" class="top-bar-icon">
+      <img src="./icons/text-logo.PNG" alt="Icon" class="topbar-icon">
       <a href="#menu">Menu</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
