--- a/index.html
+++ b/index.html
@@ -1,58 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BiniStop</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  </head>
-  <body>
-    <div class="top-bar">
-      <img src="./icons/text-logo.PNG" alt="Icon" class="topbar-icon">
-      <a href="#menu">Menu</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BiniStop</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
+</head>
+
+<body>
+<div class="top-bar">
+  <div class="barlogo">
+    <img src="./icons/text-logo.PNG" alt="Icon" class="topbar-icon">
+  </div>
+  <div class="nav-links">
+    <a href="#menu">Menu</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div>
+</div>
+
+<header class="header">
+  <img src="icons/logo.PNG" alt="BiniStop Logo" class="logo">
+</header>
+
+<section id="hero" class="hero">
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 1"></div>
+      <div class="swiper-slide"><img src="./icons/text-logo.PNG" alt="Diner Image 2"></div>
+      <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 3"></div>
     </div>
-    <header class="header">
-      <img src="icons/logo.PNG" alt="BiniStop Logo" class="logo">
-    </header>
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div>
+</section>
 
-    <section id="hero" class="hero">
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 1"></div>
-          <div class="swiper-slide"><img src="./icons/text-logo.PNG" alt="Diner Image 1"></div>
-          <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 1"></div>
-        </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-      </div>
-    </section>
+<section id="menu" class="menu">
+  <h2>Our Menu</h2>
+  <p>Placeholder</p>
+</section>
 
-    <section id="menu" class="menu">
-      <h2>Our Menu</h2>
-      <p>Placeholder</p>
-    </section>
+<section id="about" class="about">
+  <h2>About Us</h2>
+  <p>Learn more about our diner and values.</p>
+</section>
 
-    <section id="about" class="about">
-      <h2>About Us</h2>
-      <p>Learn more about our diner and values.</p>
-    </section>
+<section id="contact" class="contact">
+  <h2>Contact Us</h2>
+  <p>Stay up to date about us!</p>
+</section>
 
-    <section id="contact" class="contact">
-      <h2>Contact Us</h2>
-      <p>Stay up to date about us!</p>
-    </section>
+<footer class="footer">
+  <p>&copy; 2024 BiniStop</p>
+</footer>
 
-    <footer class="footer">
-      <p>&copy; 2024 BiniStop</p>
-    </footer>
-
-  <script src="./js/app.js">
-  </script>
-  </body>
+<script src="./js/app.js" defer></script>
+</body>
 </html>
