- Fixed Top Bar - New Header - LOOKING FOR BUGS!!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 </div>
 
 <header class="header">
-  <img src="icons/logo.PNG" alt="BiniStop Logo" class="logo">
+  <div class="logo-container">
+    <img src="./icons/comingsoon.png" alt="Icon" class="logo">
+  </div>
 </header>
 
 <section id="hero" class="hero">
