--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>BiniStop</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
   <div class="swiper-container">
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 1"></div>
-      <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 2"></div>
+      <div class="swiper-slide"><img src="./icons/text-logo.PNG" alt="Diner Image 2"></div>
       <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 3"></div>
     </div>
     <div class="swiper-pagination"></div>
