--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <section id="hero" class="hero">
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 1"></div>
-      <div class="swiper-slide"><img src="./icons/text-logo.PNG" alt="Diner Image 2"></div>
-      <div class="swiper-slide"><img src="./icons/placeholder.png" alt="Diner Image 3"></div>
+      <div class="swiper-slide"><img src="./icons/comingsoon.png" alt="Diner Image 1"></div>
+      <div class="swiper-slide"><img src="./icons/comingsoon.png" alt="Diner Image 2"></div>
+      <div class="swiper-slide"><img src="./icons/comingsoon.png" alt="Diner Image 3"></div>
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-next"></div>
