--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>BiniStop</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -28,16 +27,30 @@
   </div>
 </header>
 
+<!-- Updated Hero Section with New Swiper -->
 <section id="hero" class="hero">
-  <div class="swiper-container">
+  <div class="swiper-main">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="./icons/comingsoon.png" alt="Diner Image 1"></div>
-      <div class="swiper-slide"><img src="./icons/comingsoon.png" alt="Diner Image 2"></div>
-      <div class="swiper-slide"><img src="./icons/comingsoon.png" alt="Diner Image 3"></div>
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="./icons/comingsoon.png" alt="Diner Image 1">
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="./icons/comingsoon.png" alt="Diner Image 2">
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="./icons/comingsoon.png" alt="Diner Image 3">
+        </div>
+      </div>
     </div>
-    <div class="swiper-pagination"></div>
+    <!-- Navigation -->
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
   </div>
 </section>
 
