Fixed Swiper Fixed Color Scheme

--- a/index.html
+++ b/index.html
@@ -33,17 +33,22 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="./icons/comingsoon.png" alt="Diner Image 1">
+          <img src="./icons/poster.png" alt="Diner Image 1">
         </div>
       </div>
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="./icons/comingsoon.png" alt="Diner Image 2">
+          <img src="./icons/poster-drinks.PNG" alt="Diner Image 2">
         </div>
       </div>
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="./icons/comingsoon.png" alt="Diner Image 3">
+          <img src="./icons/poster-merch.png" alt="Diner Image 3">
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="./icons/poster-packaging.png" alt="Diner Image 3">
         </div>
       </div>
     </div>
