--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header class="header">
   <div class="logo-container">
-    <img src="./icons/comingsoon.png" alt="Icon" class="logo">
+    <img src="./icons/tb-logo.png" alt="Icon" class="logo">
   </div>
 </header>
 
@@ -61,7 +61,104 @@
 
 <section id="menu" class="menu">
   <h2>Our Menu</h2>
-  <p>Placeholder</p>
+  <div class="menu-tabs">
+    <button class="tab-button active" data-category="food">Food</button>
+    <button class="tab-button" data-category="drinks">Drinks</button>
+    <button class="tab-button" data-category="merchandise">Merchandise</button>
+  </div>
+
+  <div class="menu-content">
+    <!-- Food Items -->
+    <div class="menu-category active" id="food">
+      <div class="menu-grid">
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="Leg-ing Tumigil ang Mundo">
+          <h3>Leg-ing Tumigil ang Mundo</h3>
+          <p>Classic fried chicken with a garlic butter glaze topped with parmesan cheese, enough to make your world stop!</p>
+          <span class="price">₱150</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="B-HU-U-Rger and Fries">
+          <h3>B-HU-U-Rger and Fries</h3>
+          <p>Burger patty and buns served with vegetables, bacon, and standard-cut fries. Eat it as a sandwich or open-faced, it’s your style!</p>
+          <span class="price">₱180</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="Carbonara Strings">
+          <h3>Carbonara Strings</h3>
+          <p>Pinoy-style creamy carbonara sauced laced with bacon and cheese with optional chili flakes, perfect for your snack break. </p>
+          <span class="price">₱160</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="Pantropiko Graham">
+          <h3>Pantropiko Graham</h3>
+          <p>Indulge in layers of graham and gelatin topped with the tropical blend of sweet and sour mango for dessert.</p>
+          <span class="price">₱120</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Drinks Items -->
+    <div class="menu-category" id="drinks">
+      <div class="menu-grid">
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="Koppie-Chill">
+          <h3>Koppie-Chill</h3>
+          <p>Dating back to a time everyone needed a change, coffee dalgona arose to become a trendsetter. By topping the coffee dalgona with crushed oreos, “Koppie-Chill” is able to merge two famous drinks into one, retaining that bubbly froth, coffee and cream goodness.</p>
+          <span class="price">₱90</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="Milo Memoreo">
+          <h3>Milo Memoreo</h3>
+          <p>Everyone’s childhood served to you with a twist. “Milo Memoreo“ is a Milo drink incorporating that dalgona twist during the pandemic. That creamy chocolatey taste topped with crushed oreo cookies is sure to bring you back to some of your best memories.</p>
+          <span class="price">₱100</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="Tropical U">
+          <h3>Tropical U</h3>
+          <p>A Four Seasons juice by Tang, mixed with nata de coco and served with ice to give you that Pantropiko feel to our drink. “Tropical U” makes you feel relaxed on a hot and sunny day as the right amount of ice and tasty flavours cool your mouth. </p>
+          <span class="price">₱110</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="Nat-A-Mango">
+          <h3>Not-A-Mango</h3>
+          <p>Nat-A-Mango”—a tropical twist on a classic mango juice by Tang. Blending sweet mango with the fun chewiness of nata de coco, served over with just the right amount of ice, bringing a touch of island paradise to every sip.</p>
+          <span class="price">₱80</span>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Merchandise Items -->
+    <div class="menu-category" id="merchandise">
+      <div class="menu-grid">
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="BINI Bracelets">
+          <h3>BINI Bracelets</h3>
+          <p>Features vibrant color themes and charms representing your favorite BINI members and music video eras, including Pantropiko, Cherry On Top, Salamin Salamin, and more. Perfect for everyday wear or to match with the customer’s aesthetics.</p>
+          <span class="price">₱350</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="BINI Phone Charms">
+          <h3>BINI Phone Charms</h3>
+          <p>Made from high-quality and durable yarns, perfect for a long-lasting accessory for the customer’s phone. It is designed to represent our buyer’s favorite BINI members and music video eras, featuring various color themes and designs.</p>
+          <span class="price">₱250</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="BINI Stickers">
+          <h3>BINI Stickers</h3>
+          <p>Made from high-quality and waterproof material that showcases various designs, featuring memes, your favorite lyrics, and your favorite BINI members in the chibi art style. Customers can used these unique stickers for their personal belongings such as notebooks, laptops, tumblers, and more.</p>
+          <span class="price">₱300</span>
+        </div>
+        <div class="menu-item">
+          <img src="/api/placeholder/200/200" alt="BINI Photobooth">
+          <h3>BINI Photobooth</h3>
+          <p>Capturing the customer’s unforgettable moments by pictures. Perfect for any creative poses they could strike, whether in front of the camera or in the mirror.</p>
+          <span class="price">₱200</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section id="about" class="about">
