- New About Section - New Contact Section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>BiniStop</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 
@@ -38,19 +39,25 @@
       </div>
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="./icons/poster-drinks.PNG" alt="Diner Image 2">
+          <img src="./icons/food.jpg" alt="Diner Image 2">
         </div>
       </div>
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="./icons/poster-merch.png" alt="Diner Image 3">
+          <img src="./icons/poster-drinks.PNG" alt="Diner Image 3">
         </div>
       </div>
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="./icons/poster-packaging.png" alt="Diner Image 3">
+          <img src="./icons/poster-merch.png" alt="Diner Image 4">
         </div>
       </div>
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="./icons/poster-packaging.png" alt="Diner Image 5">
+        </div>
+      </div>
+
     </div>
     <!-- Navigation -->
     <div class="swiper-button-next"></div>
@@ -72,28 +79,24 @@
     <div class="menu-category active" id="food">
       <div class="menu-grid">
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="Leg-ing Tumigil ang Mundo">
           <h3>Leg-ing Tumigil ang Mundo</h3>
           <p>Classic fried chicken with a garlic butter glaze topped with parmesan cheese, enough to make your world stop!</p>
-          <span class="price">₱150</span>
+          <span class="price">₱95</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="B-HU-U-Rger and Fries">
           <h3>B-HU-U-Rger and Fries</h3>
           <p>Burger patty and buns served with vegetables, bacon, and standard-cut fries. Eat it as a sandwich or open-faced, it’s your style!</p>
-          <span class="price">₱180</span>
+          <span class="price">₱90</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="Carbonara Strings">
           <h3>Carbonara Strings</h3>
           <p>Pinoy-style creamy carbonara sauced laced with bacon and cheese with optional chili flakes, perfect for your snack break. </p>
-          <span class="price">₱160</span>
+          <span class="price">₱75</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="Pantropiko Graham">
           <h3>Pantropiko Graham</h3>
           <p>Indulge in layers of graham and gelatin topped with the tropical blend of sweet and sour mango for dessert.</p>
-          <span class="price">₱120</span>
+          <span class="price">₱45</span>
         </div>
       </div>
     </div>
@@ -102,28 +105,24 @@
     <div class="menu-category" id="drinks">
       <div class="menu-grid">
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="Koppie-Chill">
           <h3>Koppie-Chill</h3>
           <p>Dating back to a time everyone needed a change, coffee dalgona arose to become a trendsetter. By topping the coffee dalgona with crushed oreos, “Koppie-Chill” is able to merge two famous drinks into one, retaining that bubbly froth, coffee and cream goodness.</p>
-          <span class="price">₱90</span>
+          <span class="price">₱70</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="Milo Memoreo">
           <h3>Milo Memoreo</h3>
           <p>Everyone’s childhood served to you with a twist. “Milo Memoreo“ is a Milo drink incorporating that dalgona twist during the pandemic. That creamy chocolatey taste topped with crushed oreo cookies is sure to bring you back to some of your best memories.</p>
-          <span class="price">₱100</span>
+          <span class="price">₱80</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="Tropical U">
           <h3>Tropical U</h3>
           <p>A Four Seasons juice by Tang, mixed with nata de coco and served with ice to give you that Pantropiko feel to our drink. “Tropical U” makes you feel relaxed on a hot and sunny day as the right amount of ice and tasty flavours cool your mouth. </p>
-          <span class="price">₱110</span>
+          <span class="price">₱30</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="Nat-A-Mango">
           <h3>Not-A-Mango</h3>
           <p>Nat-A-Mango”—a tropical twist on a classic mango juice by Tang. Blending sweet mango with the fun chewiness of nata de coco, served over with just the right amount of ice, bringing a touch of island paradise to every sip.</p>
-          <span class="price">₱80</span>
+          <span class="price">₱30</span>
         </div>
       </div>
     </div>
@@ -133,28 +132,24 @@
     <div class="menu-category" id="merchandise">
       <div class="menu-grid">
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="BINI Bracelets">
           <h3>BINI Bracelets</h3>
           <p>Features vibrant color themes and charms representing your favorite BINI members and music video eras, including Pantropiko, Cherry On Top, Salamin Salamin, and more. Perfect for everyday wear or to match with the customer’s aesthetics.</p>
-          <span class="price">₱350</span>
+          <span class="price">₱25</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="BINI Phone Charms">
           <h3>BINI Phone Charms</h3>
           <p>Made from high-quality and durable yarns, perfect for a long-lasting accessory for the customer’s phone. It is designed to represent our buyer’s favorite BINI members and music video eras, featuring various color themes and designs.</p>
-          <span class="price">₱250</span>
+          <span class="price">₱30</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="BINI Stickers">
           <h3>BINI Stickers</h3>
           <p>Made from high-quality and waterproof material that showcases various designs, featuring memes, your favorite lyrics, and your favorite BINI members in the chibi art style. Customers can used these unique stickers for their personal belongings such as notebooks, laptops, tumblers, and more.</p>
-          <span class="price">₱300</span>
+          <span class="price">₱5 (1 Sticker) ₱25 (Bundle)</span>
         </div>
         <div class="menu-item">
-          <img src="/api/placeholder/200/200" alt="BINI Photobooth">
           <h3>BINI Photobooth</h3>
           <p>Capturing the customer’s unforgettable moments by pictures. Perfect for any creative poses they could strike, whether in front of the camera or in the mirror.</p>
-          <span class="price">₱200</span>
+          <span class="price"></span>
         </div>
       </div>
     </div>
@@ -163,12 +158,48 @@
 
 <section id="about" class="about">
   <h2>About Us</h2>
-  <p>Learn more about our diner and values.</p>
+  <p class="about-intro">We are more than just a diner - we're a community of BINI fans serving good food and memories.</p>
+
+  <div class="vision-mission-container">
+    <div class="vision-card">
+      <div class="card-icon">
+        <i class="fas fa-eye"></i>
+      </div>
+      <h3>Our Vision</h3>
+      <p>"To be the premier fan-operated food establishment that bridges the gap between K-pop culture and Filipino cuisine, creating a unique dining experience that celebrates both our love for BINI and great food."</p>
+    </div>
+
+    <div class="mission-card">
+      <div class="card-icon">
+        <i class="fas fa-star"></i>
+      </div>
+      <h3>Our Mission</h3>
+      <p>"We commit to serving quality food and beverages while providing a welcoming space for BINI fans to gather, share their passion, and create lasting memories. Through our themed menu items and merchandise, we aim to support and grow the BINI community while maintaining the highest standards of customer service and food quality."</p>
+    </div>
+  </div>
 </section>
 
 <section id="contact" class="contact">
   <h2>Contact Us</h2>
-  <p>Stay up to date about us!</p>
+  <p>Stay connected with BiniStop!</p>
+
+  <div class="qr-container">
+    <div class="qr-code">
+      <img src="./icons/locqr.png" alt="Location QR Code" class="qr-image">
+      <p>Scan for Location</p>
+    </div>
+  </div>
+
+  <div class="social-links">
+    <a href="https://www.facebook.com/profile.php?id=61568566895962&mibextid=ZbWKwL" class="social-button facebook">
+      <i class="fab fa-facebook-f"></i>
+      Follow us on Facebook
+    </a>
+    <a href="https://www.instagram.com/binistopdiner?igsh=bTFzdzI1MmN2djNk" class="social-button instagram">
+      <i class="fab fa-instagram"></i>
+      Follow us on Instagram
+    </a>
+  </div>
 </section>
 
 <footer class="footer">
